--- a/back/package.json
+++ b/back/package.json
@@ -9,8 +9,11 @@
     "dev": "node --watch index.mjs"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.0",
     "sequelize": "^6.37.7"
   }
