Cambios en back y front para la comprobación de usuarios

--- a/back/.env-example
+++ b/back/.env-example
@@ -1,6 +1,7 @@
-DATABASE=
-USER=
-PASSWORD=
-HOST=
-DIALECT=
-PORT=
+USER= tu_usuario
+PASSWORD= tu_contraseña
+HOST= localhost o ip
+PORT= puerto
+DATABASE= nombre_db
+DIALECT= mysql, postgresql, mariadb
+SECRET= tu_clave_secreta_de_jwt
