Entorno privado y jwt secret key

--- a/back/.env-example
+++ b/back/.env-example
@@ -4,4 +4,4 @@ HOST= localhost o ip
 PORT= puerto
 DATABASE= nombre_db
 DIALECT= mysql, postgresql, mariadb
-SECRET= tu_clave_secreta_de_jwt
+SECRET= node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
