--- a/front/package.json
+++ b/front/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "lucide": "^0.548.0",
     "lucide-react": "^0.548.0",
-    "react": "^19.1.1",
+    "react": "^19.2.0",
     "react-dom": "^19.1.1",
     "react-router": "^7.9.2",
     "tailwindcss": "^4.1.13",
