--- a/back/.env-example
+++ b/back/.env-example
@@ -5,3 +5,6 @@ PORT= puerto
 DATABASE= nombre_db
 DIALECT= mysql, postgresql, mariadb
 SECRET= node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
+
+EMAIL_USER=XXXXX 
+EMAIL_PASSWORD=XXXXX
