apiConfig centralizada, emailservice adaptado con mailtrap o  gmail, etc.

--- a/back/.env-example
+++ b/back/.env-example
@@ -1,10 +1,19 @@
-USER= tu_usuario
-PASSWORD= tu_contraseña
-HOST= localhost o ip
-PORT= puerto
-DATABASE= nombre_db
-DIALECT= mysql, postgresql, mariadb
-SECRET= node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
+# Database Configuration
+USER=tu_usuario
+PASSWORD=tu_contraseña
+HOST=localhost
+PORT=3306
+DATABASE=nombre_db
+DIALECT=mysql
 
-EMAIL_USER=XXXXX 
-EMAIL_PASSWORD=XXXXX
+# JWT Secret
+SECRET=tu_key_secreta_generada_con_crypto
+
+# Email Configuration (Mailtrap)
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=2525
+EMAIL_USER=tu_usuario_mailtrap
+EMAIL_PASSWORD=tu_password_mailtrap
+
+# Server Port (opcional)
+# PORT=3000
